--- a/.env
+++ b/.env
@@ -2,7 +2,9 @@
 PORT=5000
 NODE_ENV=development
 
-
+# Email Configuration
+EMAIL_USER=kingsy1131@gmail.com
+EMAIL_PASSWORD=pulfbqnwxpzaabys
 
 # Database Configuration
 DB_HOST=localhost
