--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ EMAIL_PASSWORD=pulfbqnwxpzaabys
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=Paul39!13b
-DB_NAME=real_estate_db
+DB_NAME=realestate_db
 DB_PORT=3306
 
 # CORS
